fixan horizontal scroll

--- a/scss/article.scss
+++ b/scss/article.scss
@@ -1,7 +1,8 @@
 .article-container{
-    width: 100vw;
+    width: 100%;
     display: grid;
-    grid-gap: 15px;
+    grid-gap: 0px;
+    overflow-x: hidden;
     grid-template-columns: 10% 55% 25% 10% ; 
 }
 
@@ -13,6 +14,7 @@
     margin-top: 5%;
     grid-column: 2/3;
     font-size: 2.5em;
+    padding: 5px;
 }
 
 .article-carousel{
@@ -22,6 +24,7 @@
 
 .article-text{
     grid-column: 2/3;
+    padding: 5px;
 }
 
 .article-footer{
@@ -32,6 +35,10 @@
     grid-column: 3/4;
     grid-row: 2/5;
     padding: 10%;
+
+    .card{
+        margin: 20px 20px;
+    }
 }
 
 .side-news-title h5{
